[gd_scene load_steps=2 format=3 uid="uid://cnemooseign6l"]

[ext_resource type="Script" uid="uid://2aqfxp36d880" path="res://core/control/quiz.gd" id="1_vwae7"]

[node name="Quiz" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vwae7")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -566.0
offset_top = -315.0
offset_right = 416.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "NameLabel"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Bemenet:"

[node name="InputLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Kimenet: "

[node name="OutputLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="LinesTextEdit" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
draw_tabs = true

[node name="SolutionContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -197.0
offset_right = 405.0
offset_bottom = 302.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="SolutionContainer"]
layout_mode = 2
color = Color(0.111197, 0.111197, 0.111197, 1)

[node name="MarginContainer" type="MarginContainer" parent="SolutionContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="SolutionContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SolutionContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ezt kellett volna he te butus te is fiam brutus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="SolutionContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InputSolution" type="RichTextLabel" parent="SolutionContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="OutputSolution" type="RichTextLabel" parent="SolutionContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="ScriptSolution" type="RichTextLabel" parent="SolutionContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true
tab_size = 8
